fix: todo 테이블 임시저장 상태 추가 / AssignStatus 클래스 제거